# journal-gateway

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Dockerfile  README.md  TELEMETRY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.claude/skills/add-integration/: SKILL.md
.claude/skills/add-message/: SKILL.md
.claude/skills/add-skill/: SKILL.md
.claude/skills/dev/: SKILL.md
.claude/skills/release/: SKILL.md
.github/: dependabot.yml
clients/python/: README.md  pyproject.toml
clients/python/journal_gateway_client/: __init__.py  server.py  types.py
clients/python/tests/: test_server.py
clients/typescript/: README.md  package.json  tsconfig.json
clients/typescript/src/: server.ts  types.ts
clients/typescript/tests/: server.test.ts
examples/: README.md  client-server.ts  client_server.py  gateway.env.example  gateway.json
examples/integrations/: README.md  common-mcp-servers.md
examples/integrations/database/: README.md  toolbox-mssql.json  (+3 more)
gateway/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
gateway/src/: audit.ts  config-watcher.ts  config.ts  connection.ts  env-file.ts  main.ts  mcp-client.ts  runtime.ts  skill-client.ts  telemetry.ts  types.ts  version-hash.ts
packaging/: bump-version.sh  check-lockstep.sh
packaging/docker/: Dockerfile  publish.sh
packaging/homebrew/: journal-gateway.rb  publish.sh
packaging/npm/: README.md  publish.sh
packaging/pypi/: publish.sh
protocol/: README.md  package.json  tsconfig.json
protocol/examples/: authenticate.json  register.json  tool-call.json  tool-result.json
protocol/schemas/: errors.schema.json  integrations.schema.json  messages.schema.json  skills.schema.json
protocol/src/: errors.ts  index.ts  integrations.ts  messages.ts  provider.ts
scripts/: check-lockfiles.sh  publish-docker.sh
spec/: gateway-config.schema.json  integrations.md  protocol.md  skills.md
testing/e2e/: README.md  docker-compose.yml  driver.mjs  hotreload.mjs  run-all.sh
testing/integration/: README.md
(+24 files in other folders)
