[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "journal-gateway-client"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["websockets>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
