[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "journal-gateway-client"
version = "0.7.0"
description = "Python client library for the Journal Gateway protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Journal", email = "support@journal.one" }]
keywords = ["journal", "gateway", "mcp", "model-context-protocol", "websocket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["websockets>=13.0"]

[project.urls]
Homepage = "https://journal.one"
Repository = "https://github.com/EnduranceLabs/journal-gateway"
Documentation = "https://github.com/EnduranceLabs/journal-gateway#readme"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
